Second test posts.

--- a/_site.yml
+++ b/_site.yml
@@ -3,7 +3,7 @@ title: "SteinsZeit"
 description: |
   Building things in R and Python
 base_url: https://stefan-stein.github.io
-repository_url: https://stefan-stein.github.io
+repository_url: https://github.com/stefan-stein/stefan-stein.github.io
 collections:
   posts:
     disqus: steinszeit
