--- a/_site.yml
+++ b/_site.yml
@@ -9,6 +9,9 @@ collections:
     disqus: steinszeit
     hidden: true
     share: [twitter, linkedin]
+creative_commons: CC BY
+twitter:
+  site: "@SteinsZeit"
 output_dir: "."
 navbar:
   right:
@@ -18,4 +21,8 @@ navbar:
       href: about.html
     - icon: fa fa-rss
       href: index.xml
+    - icon: fab fa-twitter
+      href: https://twitter.com/SteinsZeit
+    - icon: fab fa-github
+      href: https://github.com/stefan-stein
 output: distill::distill_article
